# rksi2025

./: .env.template  .gitignore  .pre-commit-config.yaml  README.MD  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Makefile  README.MD  alembic.ini  pyproject.toml
backend/config/: config.template.toml  config.toml  logging.yaml  test_config.toml
backend/docker/: serve.sh
backend/src/application/auth/: code_to_token_handler.py  login_handler.py  logout_handler.py  refresh_tokens_handler.py  register_handler.py
backend/src/application/auth/common/: errors.py
backend/src/application/common/: idp.py  types.py
backend/src/application/common/errors/: base.py
backend/src/application/common/interfaces/: uow.py
backend/src/application/documents/: check_document_handler.py  create_document_handler.py  user_document_checks_handler.py  utils.py
backend/src/core/: config.py
backend/src/core/di/: container.py
backend/src/core/di/providers/: db.py  gateways.py  handlers.py  presentation.py  redis_provider.py  services.py  settings.py  uow.py
backend/src/infrastructure/: document_processing.py  email_notification.py  token_service.py
backend/src/infrastructure/db/: config.py  uow.py
backend/src/infrastructure/db/alembic/: env.py
backend/src/infrastructure/db/gateways/: auth_gateway.py  document_gateway.py  session_gateway.py  user_gateway.py
backend/src/infrastructure/db/models/: __init__.py  base.py  document.py  secondary.py  session.py  user.py
backend/src/infrastructure/log/: main.py
backend/src/infrastructure/notification/: smtp_service.py
backend/src/presentation/web_api/: config.py  exceptions.py  main.py  middlwares.py  response_utils.py  responses.py
backend/src/presentation/web_api/routes/: auth_router.py  document_router.py  (+2 more)
backend/tests/: config.py  conftest.py
backend/tests/unit/: test_db.py
(+11 files in other folders)
